# SleipnirDB

./: .gitignore  Cargo.toml  LICENSE.md  README.md  store.db
docs/: ROADMAP.md
docs/theory/: ABOUT.md
docs/theory/UNIT-II/: SQL Queries.md
examples/: hello.rs
new/: Cargo.toml
new/src/: DATABASE.md  main.rs
new/src/documents/: find.rs  mod.rs
new/src/header/: mod.rs
norse/: Cargo.toml
src/: error.rs  lib.rs  main.rs
src/database/: dump.rs  header.rs  load.rs  mod.rs  save.rs  tables.rs
src/table/: add.rs  contains.rs  information.rs  mod.rs  query.rs  remove.rs  save.rs  update.rs
