[package]
name = "sleipnirdb"
version = "0.0.1"
edition = "2024"
description = "SleipnirDB – Bridging Worlds at Lightning Speed."
authors = ["Leon Farafonov <leofaraf@gmail.com>"]
license = "MIT"

[lib]
name = "sleipnirdb"  # Имя библиотеки
path = "src/lib.rs"

[[bin]]
name = "sleipnirdb_bin"  # Имя бинарного файла
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.3.0"
memmap2 = "0.9.5"
bson = "2.14.0"